--- a/src/main/resources/assets/tensura/lang/en_uk.json
+++ b/src/main/resources/assets/tensura/lang/en_uk.json
@@ -1,8 +1,13 @@
 {
   "item.tensura.silver_ingot": "Silver Ingot",
   "item.tensura.silver_nugget": "Silver Nugget",
-  "item.tensura.magic_steel_ingot": "Magic Steel Ingot",
-  "item.tensura.demon_steel_ingot": "Demon Steel Ingot",
+  "item.tensura.magisteel_ingot": "Magisteel Ingot",
+  "item.tensura.raw_silver": "Raw Silver",
 
-  "block.tensura.silver_block": "Magic Steel Ingot"
+  "block.tensura.silver_block": "Silver Block",
+  "block.tensura.magisteel_block": "Magisteel Block",
+  "block.tensura.silver_ore": "Silver Ore",
+
+  "itemGroup.tensuraTab": "Tensura Miscellaneous",
+  "itemGroup.tensuraTab2": "Tensura Blocks"
 }
