--- a/src/main/resources/assets/tensura/lang/en_uk.json
+++ b/src/main/resources/assets/tensura/lang/en_uk.json
@@ -4,7 +4,8 @@
   "item.tensura.magisteel_ingot": "Magisteel Ingot",
   "item.tensura.raw_silver": "Raw Silver",
   "item.tensura.thatch": "Thatch",
-  "item.tensura.like_flames_music_disc.desc": "by Mindaryn",
+  "item.tensura.scroll_of_slimes": "Scroll of Slimes",
+  "item.tensura.like_flames_music_disc.desc": "Like Flames by Mindaryn",
   "item.tensura.like_flames_music_disc": "Like Flames",
 
   "item.tensura.raw_ant_leg": "Raw Ant Leg",
@@ -12,14 +13,24 @@
   "item.tensura.raw_knight_spider_meat": "Raw Knight Spider Meat",
   "item.tensura.cooked_knight_spider_meat": "Cooked Knight Spider Meat",
 
-
   "block.tensura.silver_block": "Silver Block",
   "block.tensura.magisteel_block": "Magisteel Block",
   "block.tensura.silver_ore_stone": "Silver Ore Stone",
   "block.tensura.silver_ore_deepslate": "Silver Ore Deepslate",
   "block.tensura.thatch_block": "Thatch Block",
+  "block.tensura.loom":  "Loom",
+  "block.tensura.warp_pad":  "Warp Pad",
+  "block.tensura.cooking_pot":  "Cooking Pot",
+
+  "block.tensura.thatch_lower_sloped_roof": "Thatch Lower Sloped Roof",
+  "block.tensura.thatch_upper_sloped_roof": "Thatch Upper Sloped Roof",
+  "block.tensura.thatch_lower_steep_roof": "Thatch Lower Steep Roof",
+  "block.tensura.thatch_upper_steep_roof": "Thatch Upper Steep Roof",
+
 
   "item.tensura.magisteel_sword": "Magisteel Sword",
+  "item.tensura.ice_blade": "Ice Blade",
+
   "item.tensura.magisteel_pickaxe": "Magisteel Pickaxe",
   "item.tensura.magisteel_axe": "Magisteel Axe",
   "item.tensura.magisteel_shovel": "Magisteel Shovel",
