managed to get all of the blocks and items added. Also fixed the lang file

--- a/src/main/resources/assets/tensura/lang/en_us.json
+++ b/src/main/resources/assets/tensura/lang/en_us.json
@@ -1,51 +1,180 @@
 {
+  "item.tensura.adamantite_ingot": "Adamantite Ingot",
+  "item.tensura.armoursaurus_scale": "Armoursaurus Scale",
+  "item.tensura.bronze_coin": "Bronze Coin",
+  "item.tensura.charybdis_scale": "Charybdis Scale",
+  "item.tensura.direwolf_pelt": "Direwolf Pelt",
+  "item.tensura.gehenna_moth_silk": "Gehenna Moth Silk",
+  "item.tensura.giant_ant_carapace": "Giant Ant Carapace",
+  "item.tensura.giant_ant_leg": "Giant Ant Leg",
+  "item.tensura.giant_bat_wing": "Giant Bat Wing",
+  "item.tensura.gold_coin": "Gold Coin",
+  "item.tensura.hell_moth_silk": "Hell Moth Silk",
+  "item.tensura.high_quality_magic_crystal": "High Quality Magic Crystal",
+  "item.tensura.hihiirokane_ingot": "Hihi'Irokane Ingot",
+  "item.tensura.insectar_carapace": "Insectar Carapace",
+  "item.tensura.knight_spider_carapace": "Knight Spider Carapace",
+  "item.tensura.knight_spider_leg": "Knight Spider Leg",
+  "item.tensura.large_wooden_bowl": "Large Wooden Bowl",
+  "item.tensura.like_flames_music_disc": "Music Disc",
+  "item.tensura.like_flames_music_disc.desc": "Like Flames by Mindaryn",
+  "item.tensura.low_quality_magic_crystal": "Low Quality Magic Crystal",
+  "item.tensura.magic_stone": "Magic Stone",
+  "item.tensura.magisteel_ingot": "Magisteel Ingot",
+  "item.tensura.medium_quality_magic_crystal": "Medium Quality Magic Crystal",
+  "item.tensura.mithril_ingot": "Mithril Ingot",
+  "item.tensura.orichalcum_ingot": "Orichalcum Ingot",
+  "item.tensura.raw_silver": "Raw Silver",
+  "item.tensura.scroll_of_slimes": "Scroll of Slimes",
+  "item.tensura.serpent_scale": "Serpent Scale",
+  "item.tensura.silver_coin": "Silver Coin",
   "item.tensura.silver_ingot": "Silver Ingot",
   "item.tensura.silver_nugget": "Silver Nugget",
-  "item.tensura.magisteel_ingot": "Magisteel Ingot",
-  "item.tensura.raw_silver": "Raw Silver",
+  "item.tensura.sissie_fin": "Sissie Fin",
+  "item.tensura.spider_fang": "Spider Fang",
+  "item.tensura.spirit_core": "Spirit Core",
+  "item.tensura.stella_gold_coin": "Stella Gold Coin",
   "item.tensura.thatch": "Thatch",
-  "item.tensura.scroll_of_slimes": "Scroll of Slimes",
-  "item.tensura.like_flames_music_disc.desc": "Like Flames by Mindaryn",
-  "item.tensura.like_flames_music_disc": "Like Flames",
-
-  "item.tensura.raw_ant_leg": "Raw Ant Leg",
-  "item.tensura.cooked_ant_leg": "Cooked Ant Leg",
+  "item.tensura.bulldeer_beef": "Bulldeer Beef",
+  "item.tensura.bulldeer_steak": "Bulldeer Steak",
+  "item.tensura.bulldeer_shish_kebab": "Bulldeer Shish Kebab",
+  "item.tensura.raw_giant_ant_meat": "Raw Giant Ant Meat",
+  "item.tensura.cooked_giant_ant_meat": "Cooked Giant Ant Meat",
+  "item.tensura.raw_giant_bat_meat": "Raw Giant Bat Meat",
+  "item.tensura.cooked_giant_bat_meat": "Cooked Giant Bat Meat",
   "item.tensura.raw_knight_spider_meat": "Raw Knight Spider Meat",
   "item.tensura.cooked_knight_spider_meat": "Cooked Knight Spider Meat",
-
-  "block.tensura.silver_block": "Silver Block",
-  "block.tensura.block_of_magisteel": "Magisteel Block",
-  "block.tensura.silver_ore": "Silver Ore Stone",
-  "block.tensura.deepslate_silver_ore": "Silver Ore Deepslate",
+  "item.tensura.raw_armoursaurus_meat": "Raw Armoursaurus Meat",
+  "item.tensura.cooked_armoursaurus_meat": "Cooked Armoursaurus Meat",
+  "item.tensura.raw_charybdis_meat": "Raw Charybdis Meat",
+  "item.tensura.charybdis_sashimi": "Charybdis Sashimi",
+  "item.tensura.cooked_charybdis_meat": "Cooked Charybdis Meat",
+  "item.tensura.raw_serpent_meat": "Raw Serpent Meat",
+  "item.tensura.cooked_serpent_meat": "Cooked Serpent Meat",
+  "item.tensura.raw_spear_toro_meat": "Raw Spear Toro Meat",
+  "item.tensura.spear_toro_sashimi": "Spear Toro Sashimi",
+  "item.tensura.cooked_spear_toro_meat": "Cooked Spear Toro Meat",
+  "item.tensura.raw_megalodon_meat": "Raw Megalodon Meat",
+  "item.tensura.megalodon_sashimi": "Megalodon Sashimi",
+  "item.tensura.cooked_megalodon_meat": "Cooked Megalodon Meat",
+  "item.tensura.rice": "Rice",
+  "item.tensura.black_rice": "Black Rice",
+  "item.tensura.sweet_potato": "Sweet Potato",
+  "item.tensura.large_sweet_potato": "Large Sweet Potato",
+  "item.tensura.baked_sweet_potato": "Baked Sweet Potato",
+  "item.tensura.large_baked_sweet_potato": "Large Baked Sweet Potato",
+  "item.tensura.large_potato": "Large Potato",
+  "item.tensura.large_baked_potato": "Large Baked Potato",
+  "item.tensura.onigiri": "Onigiri",
+  "item.tensura.black_onigiri": "Black Onigiri",
+  "item.tensura.sushi": "Sushi",
+  "item.tensura.sissie_fin_soup": "Sissie Fin Soup",
+  "item.tensura.dubious_food": "Dubious Food",
+  "item.tensura.bowl_of_ramen": "Bowl of Ramen",
+  "item.tensura.black_coffee": "Black Coffee",
+  "item.tensura.black_tea": "Black Tea",
+  "item.tensura.coffee_with_milk": "Coffee with Milk",
+  "item.tensura.tea_with_milk": "Tea with Milk",
+  "item.tensura.green_tea": "Green Tea",
+  "item.tensura.herbal_tea": "Herbal Tea",
+  "item.tensura.low_potion": "Low Potion",
+  "item.tensura.high_potion": "High Potion",
+  "item.tensura.full_potion": "Full Potion",
+  "item.tensura.revival_elixer": "Revival Elixer",
+  "block.tensura.block_of_adamantite": "Block of Adamantite",
+  "block.tensura.block_of_hihiirokane": "Block of Hihi'Irokane",
+  "block.tensura.block_of_magisteel": "Block of Magisteel",
+  "block.tensura.block_of_mithril": "Block of Mithril",
+  "block.tensura.block_of_orichalcum": "Block of Orichalcum",
+  "block.tensura.block_of_raw_silver": "Block of Raw Silver",
+  "block.tensura.block_of_silver": "Block of Silver",
+  "block.tensura.cooking_pot": "Cooking Pot",
+  "block.tensura.deepslate_silver_ore": "Deepslate Silver Ore",
+  "block.tensura.loom": "Loom",
+  "block.tensura.magic_engine": "Magic Engine",
+  "block.tensura.palm_door": "Palm Door",
+  "block.tensura.palm_leaves": "Palm Leaves",
+  "block.tensura.palm_log": "Palm Log",
+  "block.tensura.palm_planks": "Palm Planks",
+  "block.tensura.palm_slab": "Palm Slab",
+  "block.tensura.palm_stairs": "Palm Stairs",
+  "block.tensura.sakura_door": "Cherry Blossom Door",
+  "block.tensura.sakura_leaves": "Cherry Blossom Leaves",
+  "block.tensura.sakura_log": "Cherry Blossom Log",
+  "block.tensura.sakura_planks": "Cherry Blossom Planks",
+  "block.tensura.sakura_slab": "Cherry Blossom Slab",
+  "block.tensura.sakura_stairs": "Cherry Blossom Stairs",
+  "block.tensura.sarasa_sand": "Sarasa Sand",
+  "block.tensura.silver_ore": "Silver Ore",
+  "block.tensura.smithing_bench": "Smithing Bench",
   "block.tensura.thatch_block": "Thatch Block",
-  "block.tensura.loom":  "Loom",
-  "block.tensura.warp_pad":  "Warp Pad",
-  "block.tensura.cooking_pot":  "Cooking Pot",
-
-  "block.tensura.thatch_lower_sloped_roof": "Thatch Lower Sloped Roof",
-  "block.tensura.thatch_upper_sloped_roof": "Thatch Upper Sloped Roof",
-  "block.tensura.thatch_lower_steep_roof": "Thatch Lower Steep Roof",
-  "block.tensura.thatch_upper_steep_roof": "Thatch Upper Steep Roof",
-
-
-  "item.tensura.magisteel_sword": "Magisteel Sword",
+  "block.tensura.warp_pad": "Warp Pad",
+  "item.tensura.flint_sword": "Flint Sword",
+  "item.tensura.silver_sword": "Silver Sword",
+  "item.tensura.low_magisteel_sword": "Low Magisteel Sword",
+  "item.tensura.high_magisteel_sword": "High Magisteel Sword",
+  "item.tensura.mithril_sword": "Mithril Sword",
+  "item.tensura.orichalcum_sword": "Orichalcum Sword",
+  "item.tensura.pure_magisteel_sword": "Pure Magisteel Sword",
+  "item.tensura.adamantite_sword": "Adamantite Sword",
+  "item.tensura.hihiirokane_sword": "Hihi'Irokane Sword",
   "item.tensura.ice_blade": "Ice Blade",
-
-"tooltip.tensura.iceblade.tooltip.shift": "Freeze thy enemy to become more resistant.",
-"tooltip.tensura.iceblade.tooltip": "Press §eShift§r for more Information!",
-
-  "item.tensura.magisteel_pickaxe": "Magisteel Pickaxe",
-  "item.tensura.magisteel_axe": "Magisteel Axe",
-  "item.tensura.magisteel_shovel": "Magisteel Shovel",
-  "item.tensura.magisteel_hoe": "Magisteel Hoe",
-  "item.tensura.diamond_sickle": "Diamond Sickle",
-  "item.tensura.stone_sickle": "Stone Sickle",
+  "tooltip.tensura.iceblade.tooltip.shift": "Once belonged to the Middle Finger, the Frozen Swordmage Yamza!",
+  "tooltip.tensura.iceblade.tooltip": "Press §eShift§r for more Information!",
+  "item.tensura.wooden_sickle": "Wood Sickle",
+  "item.tensura.golden_sickle": "Gold Sickle",
+  "item.tensura.flint_pickaxe": "Flint Pickaxe",
+  "item.tensura.flint_axe": "Flint Axe",
+  "item.tensura.flint_shovel": "Flint Shovel",
+  "item.tensura.flint_hoe": "Flint Hoe",
+  "item.tensura.flint_sickle": "Flint Sickle",
+  "item.tensura.silver_pickaxe": "Silver Pickaxe",
+  "item.tensura.silver_axe": "Silver Axe",
+  "item.tensura.silver_shovel": "Silver Shovel",
+  "item.tensura.silver_hoe": "Silver Hoe",
+  "item.tensura.silver_sickle": "Silver Sickle",
   "item.tensura.iron_sickle": "Iron Sickle",
-
-  "itemGroup.tensuraTab": "Tensura Miscellaneous",
-  "itemGroup.tensuraTab2": "Tensura Blocks",
-  "itemGroup.tensuraTab3": "Tensura Consumables",
-  "itemGroup.tensuraTab4": "Tools",
-  "itemGroup.tensuraTab5": "Weapons",
-  "itemGroup.tensuraTab6": "Wearables"
+  "item.tensura.diamond_sickle": "Diamond Sickle",
+  "item.tensura.low_magisteel_pickaxe": "Low Magisteel Pickaxe",
+  "item.tensura.low_magisteel_axe": "Low Magisteel Axe",
+  "item.tensura.low_magisteel_shovel": "Low Magisteel Shovel",
+  "item.tensura.low_magisteel_hoe": "Low Magisteel Hoe",
+  "item.tensura.low_magisteel_sickle": "Low Magisteel Sickle",
+  "item.tensura.netherite_sickle": "Netherite Sickle",
+  "item.tensura.high_magisteel_pickaxe": "High Magisteel Pickaxe",
+  "item.tensura.high_magisteel_axe": "High Magisteel Axe",
+  "item.tensura.high_magisteel_shovel": "High Magisteel Shovel",
+  "item.tensura.high_magisteel_hoe": "High Magisteel Hoe",
+  "item.tensura.high_magisteel_sickle": "High Magisteel Sickle",
+  "item.tensura.mithril_pickaxe": "Mithril Pickaxe",
+  "item.tensura.mithril_axe": "Mithril Axe",
+  "item.tensura.mithril_shovel": "Mithril Shovel",
+  "item.tensura.mithril_hoe": "Mithril Hoe",
+  "item.tensura.mithril_sickle": "Mithril Sickle",
+  "item.tensura.orichalcum_pickaxe": "Orichalcum Pickaxe",
+  "item.tensura.orichalcum_axe": "Orichalcum Axe",
+  "item.tensura.orichalcum_shovel": "Orichalcum Shovel",
+  "item.tensura.orichalcum_hoe": "Orichalcum Hoe",
+  "item.tensura.orichalcum_sickle": "Orichalcum Sickle",
+  "item.tensura.pure_magisteel_pickaxe": "Pure Magisteel Pickaxe",
+  "item.tensura.pure_magisteel_axe": "Pure Magisteel Axe",
+  "item.tensura.pure_magisteel_shovel": "Pure Magisteel Shovel",
+  "item.tensura.pure_magisteel_hoe": "Pure Magisteel Hoe",
+  "item.tensura.pure_magisteel_sickle": "Pure Magisteel Sickle",
+  "item.tensura.adamantite_pickaxe": "Adamantite Pickaxe",
+  "item.tensura.adamantite_axe": "Adamantite Axe",
+  "item.tensura.adamantite_shovel": "Adamantite Shovel",
+  "item.tensura.adamantite_hoe": "Adamantite Hoe",
+  "item.tensura.adamantite_sickle": "Adamantite Sickle",
+  "item.tensura.hihiirokane_pickaxe": "Hihi'Irokane Pickaxe",
+  "item.tensura.hihiirokane_axe": "Hihi'Irokane Axe",
+  "item.tensura.hihiirokane_shovel": "Hihi'Irokane Shovel",
+  "item.tensura.hihiirokane_hoe": "Hihi'Irokane Hoe",
+  "item.tensura.hihiirokane_sickle": "Hihi'Irokane Sickle",
+  "itemGroup.tensuraTab": "T:R Weapons",
+  "itemGroup.tensuraTab2": "T:R Tools",
+  "itemGroup.tensuraTab3": "T:R Gear",
+  "itemGroup.tensuraTab4": "T:R Blocks",
+  "itemGroup.tensuraTab5": "T:R Consumables",
+  "itemGroup.tensuraTab6": "T:R Misc"
 }
