--- a/src/main/resources/assets/tensura/lang/en_us.json
+++ b/src/main/resources/assets/tensura/lang/en_us.json
@@ -35,6 +35,7 @@
   "item.tensura.spirit_core": "Spirit Core",
   "item.tensura.stella_gold_coin": "Stella Gold Coin",
   "item.tensura.thatch": "Thatch",
+  "item.tensura.chapter_1": "Chapter 1: Death and Reincarnation",
   "item.tensura.bulldeer_beef": "Bulldeer Beef",
   "item.tensura.bulldeer_steak": "Bulldeer Steak",
   "item.tensura.bulldeer_shish_kebab": "Bulldeer Shish Kebab",
