Updated en_us.json and added 2 textures

--- a/src/main/resources/assets/tensura/lang/en_us.json
+++ b/src/main/resources/assets/tensura/lang/en_us.json
@@ -132,6 +132,7 @@
   "item.tensura.low_quality_magic_crystal": "Low Quality Magic Crystal",
   "item.tensura.magic_stone": "Magic Stone",
   "item.tensura.magisteel_ingot": "Magisteel Ingot",
+  "item.tensura.magisteel_nugget": "Magisteel Nugget",
   "item.tensura.medium_quality_magic_crystal": "Medium Quality Magic Crystal",
   "item.tensura.megalodon_sashimi": "Megalodon Sashimi",
   "item.tensura.mithril_axe": "Mithril Axe",
